--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,19 +1,13 @@
 a {
-    background: #8023FF;
+    background: #EF3D50;
     color: white;
     text-decoration: none;
     border: 1px solid transparent;
     border-radius: 5px;
 }
-
-button {
-    background: #8023FF;
-    color: white;
-    text-decoration: none;
-    border: 1px solid transparent;
-    border-radius: 5px;
-}
-
+/*
+f28482
+*/
 .page {
     min-height: 100vh;
     background: white; /* mobile */
@@ -21,7 +15,6 @@ button {
   
   .app {
     min-height: 100vh;
-    padding: 16px;
     background: white;
   }
   
@@ -31,15 +24,16 @@ button {
       background: #f5f5f7;
       padding: 32px 0;
     }
+    body {
+        background: #f5f5f7
+    }
   
     .app {
-      min-height: auto;
-      max-width: 900px;
-      margin: 0 auto;
-      padding: 24px;
-  
-      border: 1px solid #e5e7eb;
-      border-radius: 12px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.06);
+        min-height: calc(100vh - 60px);
+        max-width: 900px;
+        margin: 0 auto;
+        border: 1px solid #e5e7eb;
+        border-radius: 12px;
+        box-shadow: 0 10px 25px rgba(0,0,0,0.06);
     }
   }
