--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -1,12 +1,28 @@
 
-#home button {
+.upload-cta > button {
     padding: 20px 40px 20px 40px;
     text-align: center;
-    
+    font-size: 30px;
+    border-radius: 20px;
+    box-shadow: 0px 10px 25px rgba(0,0,0,0.20);
+    background: #EF3D50;
+    color: white;
+    text-decoration: none;
+    border: 1px solid transparent;
 }
 
-#home div {
+.upload-cta {
+    margin-top:auto;
+    margin-bottom: 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
+#home{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: calc(100vh - 110px)
+}
+
