Changed the styling on the items in the editor. Fixed the home button styling after deleting it last change

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -27,3 +27,14 @@
         box-shadow: 0 10px 25px rgba(0,0,0,0.06);
     }
   }
+/* Remove arrows in Chrome, Safari, Edge, Opera */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Remove arrows in Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
