--- a/client/src/pages/EditorPage.css
+++ b/client/src/pages/EditorPage.css
@@ -1,15 +1,15 @@
 .editor-input-div {
-    background:#EF3D50;
+    background:#f9f9f9;
     border-radius: 8px;
     margin-bottom: 8px;
     padding-block: 13px;
     padding-inline: 13px;
 }
 .editor-input-div > input {
-    background: #b42e3b;
+    background: #e6e6e6;
     text-decoration: none;
     border: 2px solid transparent;
-    color:rgb(255, 213, 213);
+    color:black;
     border-radius: 5px;
     padding-block: 7px;
     padding-inline: 10px;
@@ -17,14 +17,14 @@
     width:100%;
 }
 .editor-input-div > input::placeholder {
-    color: rgb(255, 187, 187);
+    color: rgb(149, 149, 149);
 }
 .editor-input-div > input:focus-visible{
-    border: 3px solid #ffa2ab;
+    border: 3px solid #EF3D50;
     outline: none
 }
 .editor-input-div > p {
-    color: rgb(255, 213, 213);
+    color: black;
     font-size: 10px ;
     margin-left: 3px;
     margin-top: 3px;
@@ -50,18 +50,18 @@
 }
 
 .edit {
-    background:#EF3D50;
+    background:#f9f9f9;
     border-radius: 8px;
     margin-bottom: 8px;
     padding-block: 5px;
     padding-inline: 13px;
     align-items: center;
-    color: rgb(255, 213, 213)
+    color: black
 }
 .totals-item > div {
     display: flex;
-    background:#b42e3b;
-    color: rgb(255, 213, 213);
+    background:#e6e6e6;
+    color: black;
     align-items: center;
     border-radius: 5px;
     padding-inline: 5px;
@@ -71,10 +71,10 @@
     font-size: 15px;
 }
 .totals-item > div > input {
-    background: #b42e3b;
+    background: #e6e6e6;
     text-decoration: none;
     border: 2px solid transparent;
-    color:rgb(255, 213, 213);
+    color:black;
     border-radius: 5px;
     padding-block: 7px;
     padding-inline: 10px;
@@ -84,9 +84,85 @@
 }
 
 .totals-item > div > input::placeholder {
-    color: rgb(255, 187, 187);
+    color: rgb(149, 149, 149);
 }
 .totals-item > div > input:focus-visible{
-    border: 3px solid #ffa2ab;
+    border: 3px solid #EF3D50;
     outline: none
+}
+
+#add-item {
+    background: #EF3D50;
+    text-decoration: none;
+    border: 2px solid transparent;
+    color:rgb(255, 213, 213);
+    border-radius: 5px;
+    padding-block: 5px;
+    padding-inline: 10px;
+    font-size: 13px;
+    width:100%;
+    margin-bottom: 10px;
+}
+
+.create-div {
+    background:#EF3D50;
+    border-radius: 8px;
+    margin-bottom: 8px;
+    padding-block: 13px;
+    padding-inline: 13px;
+    display:flex;
+    flex-direction: column;
+}
+.create-div > div {
+    display: flex;
+    
+}
+.create-div > div > h4 {
+    color:white;
+    margin-bottom: 8px
+}
+.create-div > div > button {
+    margin-left:auto;
+    text-decoration: none;
+    border: 2px solid transparent;
+    color:#a02633;
+    font-weight: 800;
+    border-radius: 5px;
+    padding-block: 4px;
+    padding-inline: 7px;
+    font-size: 12px;
+    margin-bottom: 7px
+}
+.create-field {
+    display: flex;
+    flex-direction: column;
+}
+.create-field > input{
+    background: #b42e3b;
+    text-decoration: none;
+    border: 2px solid transparent;
+    color:rgb(255, 213, 213);
+    border-radius: 5px;
+    padding-block: 7px;
+    padding-inline: 10px;
+    font-size: 15px;
+    width:100%;
+}
+.create-field > p {
+    color: rgb(255, 213, 213);
+    font-size: 10px ;
+    margin-left: 3px;
+    margin-top: 3px;
+}
+.create-div > button {
+    margin-left: auto;
+    text-decoration: none;
+    border: 2px solid transparent;
+    color:#a02633;
+    font-weight: 800;
+    border-radius: 5px;
+    padding-block: 5px;
+    padding-inline: 10px;
+    font-size: 15px;
+    margin-top: 8px;
 }
