--- a/client/src/pages/EditorPage.css
+++ b/client/src/pages/EditorPage.css
@@ -18,6 +18,7 @@
 }
 .editor-input-div > input::placeholder {
     color: rgb(149, 149, 149);
+    font-size: 13px;
 }
 .editor-input-div > input:focus-visible{
     border: 3px solid #EF3D50;
@@ -28,7 +29,29 @@
     font-size: 10px ;
     margin-left: 3px;
     margin-top: 3px;
-    
+}
+.editor-input-div >div > p {
+    color: black;
+    font-size: 10px ;
+    margin-left: 3px;
+    margin-top: 3px;
+}
+.editor-input-div > div {
+    display:flex;
+    align-items: center;
+    margin-top: 6px
+}
+.editor-input-div > div > button {
+    padding: 4px 7px 4px 7px;
+    text-align: center;
+    font-size: 10px;
+    border-radius: 8px;
+    background: #EF3D50;
+    color: white;
+    text-decoration: none;
+    border: 1px solid transparent;
+    margin-left:auto;
+    margin-top: 6px;
 }
 
 .editor-title {
