--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -17,6 +17,7 @@ header > a{
 header > a:hover {
     transform: translateY(-1px);
     box-shadow: 0 4px 8px rgba(0,0,0,0.15);
+    filter:brightness(0.95);
 }
 @media (min-width: 900px) {
     header {
