--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -10,6 +10,10 @@
     text-decoration: none;
     border: 1px solid transparent;
 }
+.upload-cta > button:hover {
+    filter:brightness(0.95);
+    padding: 21px 42px 21px 42px;
+}
 
 .upload-cta {
     margin-top:auto;
@@ -20,9 +24,32 @@
 }
 
 #home{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-height: calc(100vh - 110px)
+    text-align:center;
+    min-height: calc(100vh - 110px);
+    padding-bottom: 80px;
+    padding-inline: 20px;
 }
 
+.hero-phone {
+    width: 320px;          /* mobile size */
+    max-width: 70vw;       /* responsive */
+    display: block;
+    margin: 30px auto;     /* center */
+  
+    filter: drop-shadow(0 40px 80px rgba(0,0,0,0.25));
+}
+@media (min-width: 900px) {
+    .hero-phone {
+        width: 360px;
+    }
+  }
+#home h1 {
+    font-size: 42px;
+    margin-bottom: 12px;
+}
+  
+#home p {
+    color: #6b7280;
+    margin-bottom: 40px;
+}
+  
