--- a/client/src/pages/ReceiptPage.css
+++ b/client/src/pages/ReceiptPage.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     margin-inline: 30px;
     box-shadow: 0 10px 25px rgba(0,0,0,0.05) ; 
-    padding: 25px
+    padding: 25px;
 }
 @media (min-width: 900px) {
     .receipt-page {
@@ -52,7 +52,6 @@
 #show-claimed-btn {
     display: flex;
     background: white;
-    text-decoration: none;
     border: 1px transparent;
     justify-content: left;
     padding: 8px;
@@ -78,19 +77,58 @@
     box-shadow: 0px 10px 25px rgba(0,0,0,0.20);
     background: #EF3D50;
     color: white;
-    text-decoration: none;
     border: 1px solid transparent;
+}
+#venmo-btn:hover {
+    filter:brightness(0.95);
 }
 
 .share-btn {
-    margin-left:auto;
-    padding: 3px 10px 3px 10px;
+    padding: 7px 12px;
     text-align: center;
-    font-size: 15px;
-    border-radius: 20px;
+    font-size: 11px;
+    border-radius: 18px;
     background: #EF3D50;
     color: white;
-    text-decoration: none;
+    font-weight:600;
     border: 1px solid transparent;
-    margin-bottom: 10px;
 }
+@media (min-width: 900px) {
+    .share-btn {
+        padding: 7px 12px;
+        font-size: 13px;
+
+    }
+  }
+.share-btn:hover {
+    filter:brightness(0.95);
+}
+
+.context-header {
+    background: #f3f4f6;
+    padding: 12px 16px;
+    border-radius: 10px;
+    border-left: 4px solid #d1d5db; /* darker than bg */
+    border-bottom: 4px solid #d1d5db;
+    margin-bottom: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-inline: 23px;
+    margin-top: 5px;
+  }
+  @media (min-width: 900px) {
+    .context-header{
+        margin-inline: 60px;
+    }
+  }
+.context-text-div > h3{
+    font-weight: 700;
+    font-size: 16px;
+    
+}
+
+.context-text-div > p {
+    font-size: 14px;
+    color: #6b7280;
+  }
