--- a/client/src/components/ReceiptItems.css
+++ b/client/src/components/ReceiptItems.css
@@ -6,7 +6,14 @@
     align-items: center;
     justify-content: left;
     margin: 2px;
+    margin-bottom: 8px
 }
+@media (min-width: 900px) {
+    .receipt-item {
+        margin: 2px;
+        margin-bottom: 2px;
+    }
+  }
 .receipt-item > p {
     color:rgb(107, 107, 107);
     font-size: 15px;
