--- a/client/src/pages/ReceiptPage.css
+++ b/client/src/pages/ReceiptPage.css
@@ -6,6 +6,7 @@
     box-shadow: 0 10px 25px rgba(0,0,0,0.05) ; 
     padding: 25px;
 }
+
 @media (min-width: 900px) {
     .receipt-page {
         margin-inline: 70px;
@@ -18,7 +19,7 @@
     border-bottom: 1px grey solid;
     margin-bottom: 10px;
 }
-#items-div {
+.items-div {
     border-bottom: 1px grey solid;
     margin-bottom: 10px;
 }
